[package]
name = "autosprint-mcbe"
version = "0.1.0"
edition = "2021"

[dependencies]
directories = "5.0"

[dependencies.windows]
version = "0.52.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
]

[build-dependencies]
embed-resource = "2.4"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = true
